<resources>
    <string name="app_name">FacilFiado</string>
    <string name="ID">ID:</string>
    <string name="password">Password:</string>
    <string name="Enter">Entrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pagina_titulo">Titulo1</string>
    <string name="sample_ID">skjfkafjsjflkajlf</string>
    <string name="sample_Nombre">Javier Eduardo Pastor Cruzado</string>
    <string name="sample_Descripcion">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </string>

    <string name="sample_cantidad">$./10000.00</string>
    <string name="sample_IDDeudor">Julio Luperdiga</string>
    <string name="sample_fechadeuda">19/09/2020</string>
    <string name="Clientes">Clientes</string>
    <string name="Deudas">Deudas</string>
    <string name="error_timeout_title">Cargando</string>
    <string name="error_timeout_body">Cargando</string>
</resources>