<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_radius_white"
    android:orientation="vertical"
    android:layout_margin="@dimen/dp_10">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/recycle_img_deudas"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                >
            </ImageView>

            <androidx.cardview.widget.CardView
                android:id="@+id/LY_datos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/recycle_img_deudas">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/dp_5"
                        android:layout_weight="0.3"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/txt_recycle_ID_deuda"
                            android:layout_width="0dp"

                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:gravity="left"
                            android:text="@string/sample_ID"
                            android:textSize="@dimen/sp_16"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/txt_recycle_fecha_deuda"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:gravity="center_vertical"
                            android:text="@string/sample_fechadeuda"
                            android:textSize="@dimen/sp_16"
                            android:textColor="@color/black" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/dp_5"
                        android:layout_weight="0.3"
                        android:gravity="left"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/txt_recycle_cantidad_deuda"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.1"
                            android:textSize="@dimen/sp_16"
                            android:text="@string/sample_cantidad"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/txt_recycle_iddeudor_deuda"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.9"
                            android:textSize="@dimen/sp_16"
                            android:text="@string/sample_IDDeudor"
                            android:textColor="@color/black" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/txt_recycle_descripcion_deuda"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/dp_5"
                        android:layout_weight="0.4"
                        android:textSize="@dimen/sp_16"
                        android:gravity="left"
                        android:text="@string/sample_Descripcion"
                        android:textColor="@color/black" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>







</LinearLayout>