<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_14"
            android:background="@drawable/border_radius_white"
            >
            <ImageView
                android:id="@+id/recycle_img"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                >
            </ImageView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/recycle_img"
                android:background="@null">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1"
                        android:layout_margin="10dp"
                        >
                        <TextView
                            android:id="@+id/txt_recycle_ID"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/sample_ID"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:textColor="@color/black"/>
                        <TextView
                            android:id="@+id/txt_recycle_Nombre"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:text="@string/sample_Nombre"
                            android:gravity="center_vertical"
                            android:textColor="@color/black"
                            />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="10dp"
                        >
                        <TextView
                            android:id="@+id/txt_recycle_descripcion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sample_Descripcion"
                            android:gravity="center"
                            android:textColor="@color/black"/>
                    </LinearLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </RelativeLayout>

</LinearLayout>