<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1.0"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/sp_30"
                android:textStyle="bold"
                android:gravity="center_horizontal">

            </TextView>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            >

        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="vertical"
            android:gravity="center">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:orientation="horizontal"
            android:weightSum="1.0"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:weightSum="1.0"
                android:gravity="left">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:gravity="center_vertical"
                    android:text="@string/ID"
                    android:textColor="@color/white">

                </TextView>

                <LinearLayout
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="0.1">

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:gravity="center_vertical"
                    android:text="@string/password"
                    android:textColor="@color/white">

                </TextView>


            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:weightSum="1.0"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginRight="@dimen/dp_14">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:id="@+id/txt_ID">

                </EditText>
                <LinearLayout
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="0.1">

                </LinearLayout>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:id="@+id/txt_password">

                </EditText>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="1.0"
            >

            <Button
                android:id="@+id/btn_entrar"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_weight="0.3"
                android:background="@drawable/rounded_corner_red"
                android:text="@string/Enter"
                android:textColor="@color/white"
                android:onClick="onclick"
                ></Button>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>